Corrected broken CSS variable.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -57,7 +57,7 @@
             background-image: var(--image-error);
           }
           .no_license {
-            color: var(--lozenge-red-background);
+            color: var(--red-text);
           }
 
           #license_more_info {
